--- a/frameworks/go-gin-server/config/opentel-config.go.tmpl
+++ b/frameworks/go-gin-server/config/opentel-config.go.tmpl
@@ -8,14 +8,14 @@ import (
 	"go.opentelemetry.io/otel/attribute"
 	"go.opentelemetry.io/otel/exporters/otlp/otlptrace"
 	"go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc"
-	"go.opentelemetry.io/otel/propagation"
+    "go.opentelemetry.io/otel/propagation"
 	"go.opentelemetry.io/otel/sdk/resource"
 	sdktrace "go.opentelemetry.io/otel/sdk/trace"
 	"google.golang.org/grpc/credentials"
 )
 
-// InitGrpcTracer configures an OpenTelemetry exporter and trace provider
-func InitGrpcTracer(serviceName, collectorURL, insecure string) *sdktrace.TracerProvider{
+// InitRestTracer configures an OpenTelemetry exporter and trace provider
+func InitRestTracer(serviceName, collectorURL, insecure string) *sdktrace.TracerProvider {
 	secureOption := otlptracegrpc.WithTLSCredentials(credentials.NewClientTLSFromCert(nil, ""))
 	if len(insecure) > 0 {
 		secureOption = otlptracegrpc.WithInsecure()
@@ -33,27 +33,26 @@ func InitGrpcTracer(serviceName, collectorURL, insecure string) *sdktrace.Tracer
 		log.Debugf("error while configuring opentel, %v", err)
         os.Exit(1)
 	}
-
-	resources, err := resource.New(
+	restResources, err := resource.New(
 		context.Background(),
 		resource.WithAttributes(
 			attribute.String("service.name", serviceName),
-            attribute.String("library.language", "go"),
+			attribute.String("library.language", "go"),
 		),
 	)
 	if err != nil {
-		log.Errorf("Could not set resources: %v", err)
-		os.Exit(1)
+		log.Errorf("could not set restResources: %v", err)
+        os.Exit(1)
 	}
 
 	traceProvider := sdktrace.NewTracerProvider(
-		sdktrace.WithSampler(sdktrace.AlwaysSample()),
-		sdktrace.WithBatcher(exporter),
-		sdktrace.WithResource(resources),
-	)
+        sdktrace.WithSampler(sdktrace.AlwaysSample()),
+        sdktrace.WithBatcher(exporter),
+        sdktrace.WithResource(restResources),
+    )
 
-	otel.SetTracerProvider(traceProvider)
-	otel.SetTextMapPropagator(propagation.NewCompositeTextMapPropagator(propagation.TraceContext{}, propagation.Baggage{}))
+    otel.SetTracerProvider(traceProvider)
+    otel.SetTextMapPropagator(propagation.NewCompositeTextMapPropagator(propagation.TraceContext{}, propagation.Baggage{}))
 
 	return traceProvider
 }
