--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/clients/sqls/sqlite-gorm.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/clients/sqls/sqlite-gorm.go.tmpl
@@ -32,28 +32,30 @@ func InitGORMSQLiteDB() (*SQLiteClient, error) {
 	o.Do(func() {
 		if _, err = os.Stat(FileName); err == nil {
 			err = os.Remove(FileName)
-		}
-
-        if err != nil {
-            var db *gorm.DB
-            db, err = gorm.Open(sqlite.Open(FileName), &gorm.Config{})
             if err != nil {
-                log.Debugf("database connection error, %v", err)
+                log.Debugf("unable to remove database file, %v", err)
                 os.Exit(1)
             }
+		}
 
-            serviceName := os.Getenv("SERVICE_NAME")
-            collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
-            if len(serviceName) > 0 && len(collectorURL) > 0 {
-                if err := db.Use(otelgorm.NewPlugin()); err != nil {
-                    log.Debugf("unable to attach opentel plugin error, %v", err)
-                    os.Exit(1)
-                }
-            }
+        var db *gorm.DB
+        db, err = gorm.Open(sqlite.Open(FileName), &gorm.Config{})
+        if err != nil {
+            log.Debugf("database connection error, %v", err)
+            os.Exit(1)
+        }
 
-            sqliteClient = &SQLiteClient{
-                DB: db,
+        serviceName := os.Getenv("SERVICE_NAME")
+        collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
+        if len(serviceName) > 0 && len(collectorURL) > 0 {
+            if err := db.Use(otelgorm.NewPlugin()); err != nil {
+                log.Debugf("unable to attach opentel plugin error, %v", err)
+                os.Exit(1)
             }
+        }
+
+        sqliteClient = &SQLiteClient{
+            DB: db,
         }
 	})
 
