feat: added support for other git platforms

--- a/frameworks/common-files/go.mod.tmpl
+++ b/frameworks/common-files/go.mod.tmpl
@@ -1,4 +1,4 @@
-module github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}
+module {{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}
 
 go 1.20
 
