--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/dao.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/dao.go.tmpl
@@ -5,7 +5,7 @@ import (
 
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
-	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
+	"{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
 )
 
 var {{.SmallResourceNamePlural}} = make(map[int64]*models.{{.CapsResourceNameSingular}})
