--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/mysql-gorm-dao.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/mysql-gorm-dao.go.tmpl
@@ -2,8 +2,8 @@ package daos
 
 import (
     "errors"
-    "github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos/clients/sqls"
-	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
+    "{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos/clients/sqls"
+	"{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
     log "github.com/sirupsen/logrus"
     "gorm.io/gorm"
 )
