--- a/frameworks/go-grpc-server/pkg/grpc/server/services/nosqls-service.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/services/nosqls-service.go.tmpl
@@ -1,8 +1,8 @@
 package services
 
 import (
-	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos"
-	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
+	"{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos"
+	"{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
 )
 
 type {{.CapsResourceNameSingular}}Service struct {
