--- a/frameworks/common-files/README.md.tmpl
+++ b/frameworks/common-files/README.md.tmpl
@@ -53,4 +53,4 @@ export MONGO_DATABASE=grpc-server-db
     {{end}}
 {{end}}
 
-[![Open in DevPod!](https://devpod.sh/assets/open-in-devpod.svg)](https://devpod.sh/open#https://github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}})
+[![Open in DevPod!](https://devpod.sh/assets/open-in-devpod.svg)](https://devpod.sh/open#https://{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}})
