--- a/frameworks/go-grpc-server/pkg/grpc/client/client.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/client/client.go.tmpl
@@ -3,7 +3,7 @@ package client
 import (
 	"context"
 	"log"
-    pb "github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/gen/api/v1"
+    pb "{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/gen/api/v1"
 
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/credentials/insecure"
