--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/mongodb-dao.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/mongodb-dao.go.tmpl
@@ -3,8 +3,8 @@ package daos
 import (
 	"context"
 	"errors"
-    "github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos/clients/nosqls"
-    "github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
+    "{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos/clients/nosqls"
+    "{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
 	log "github.com/sirupsen/logrus"
 	"go.mongodb.org/mongo-driver/bson"
 	"go.mongodb.org/mongo-driver/bson/primitive"
