enhancement: added git-platform specific vars

--- a/frameworks/common-files/README.md.tmpl
+++ b/frameworks/common-files/README.md.tmpl
@@ -1,4 +1,4 @@
-# {{.UserName}}/{{.RepositoryName}}/{{.NodeName}}
+# {{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}
 {{.NodeName}}
 
 {{if .IsRestServer }}
@@ -53,4 +53,4 @@ export MONGO_DATABASE=grpc-server-db
     {{end}}
 {{end}}
 
-[![Open in DevPod!](https://devpod.sh/assets/open-in-devpod.svg)](https://devpod.sh/open#https://{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}})
+[![Open in DevPod!](https://devpod.sh/assets/open-in-devpod.svg)](https://devpod.sh/open#https://{{.GitPlatformUrl}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}})
