--- a/frameworks/common-files/go.mod.tmpl
+++ b/frameworks/common-files/go.mod.tmpl
@@ -1,4 +1,4 @@
-module {{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}
+module {{.GitPlatformUrl}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}
 
 go 1.20
 
