--- a/frameworks/go-gin-server/pkg/rest/server/services/sqls-service.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/services/sqls-service.go.tmpl
@@ -1,8 +1,8 @@
 package services
 
 import (
-	"{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/daos"
-	"{{.GitPlatformUrl}}/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
+	"{{.GitPlatformUrl}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/daos"
+	"{{.GitPlatformUrl}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
 )
 
 type {{.CapsResourceNameSingular}}Service struct {
