--- a/frameworks/go-gin-server/pkg/rest/server/daos/sqlite-dao.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/sqlite-dao.go.tmpl
@@ -3,8 +3,8 @@ package daos
 import (
 	"database/sql"
 	"errors"
-    "{{.GitPlatformUrl}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/daos/clients/sqls"
-	"{{.GitPlatformUrl}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
+    "{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/daos/clients/sqls"
+	"{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
     log "github.com/sirupsen/logrus"
 )
 
