--- a/frameworks/go-grpc-server/pkg/grpc/server/services/nosqls-service.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/services/nosqls-service.go.tmpl
@@ -1,8 +1,8 @@
 package services
 
 import (
-	"{{.GitPlatformUrl}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos"
-	"{{.GitPlatformUrl}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
+	"{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos"
+	"{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
 )
 
 type {{.CapsResourceNameSingular}}Service struct {
