--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/mysql-dao.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/mysql-dao.go.tmpl
@@ -4,8 +4,8 @@ import (
 	"database/sql"
 	"errors"
 	"github.com/go-sql-driver/mysql"
-    "{{.GitPlatformUrl}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos/clients/sqls"
-	"{{.GitPlatformUrl}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
+    "{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos/clients/sqls"
+	"{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
     log "github.com/sirupsen/logrus"
 )
 
